# random-docs

./: README.md  process_isolate.profile
docs/: Elliptics-server-side-applications-tutorial.md  Elliptics-setup-tutorial.md
elliptics/: debian_install.sh  debian_install_srw.sh  init.sh  install_test_app.sh  install_test_app_cpp.sh  ioserv.json  ioserv_srw.json  srw.json  test_app.py  test_app_manifest.json  test_app_manifest_cpp.json  ubuntu_install.sh
elliptics/send_msg_cpp/: CMakeLists.txt  main.cpp
elliptics/test_app_cpp/: CMakeLists.txt  main.cpp
